# KrishiMitra-AI

./: constants.py  main.py  pyproject.toml
ai/: general_chat_agent.py  image_related_ai.py
ai/LocalModels/: plant_disease_detector.py
core/: supabase.py
dependencies/: auth.py
middlewares/: cors.py
routes/: chatbot.py  image_detect.py  simple_routes.py
services/: image_service.py
utils/: clerk_authentication.py
